[project]
name = "sheet-engine"
version = "0.1.0"
description = "Spread Sheet Engine"
readme = "README.md"
authors = [
    { name = "SeanGunn-ter", email = "smg7277@psu.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.3.5",
    "ruff>=0.11.11",
    "textual>=0.56.4"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.hatch.build.targets.wheel]
packages = ["sheet_engine", "sheet_engine_ui"]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[project.scripts]
spreadsheet-app = "sheet_engine_ui.spread_sheet_app:main"